Fixed the statistics tab - Added Category Comparisons -Added Charts - Added Budget Staticstics